--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ textarea {
 }
 
 body {
-  background: url("https://cdn.discordapp.com/attachments/450592441200803841/763720558117650493/halloween_bg.jpg");
+  background: url("https://cdn.discordapp.com/attachments/839399240509816882/846116804690575430/nitro_gif.gif");
 	background-size: cover;
 	background-position: center
   
